# E-donations

./: .gitignore  Procfile  donations.json  manage.py  pyproject.toml  requirements.txt  users.json
contact/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
contact/migrations/: 0001_initial.py
donations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
donations/migrations/: 0001_initial.py  0002_auto_20200808_1706.py  0002_auto_20200810_1607.py  0002_auto_20200817_0908.py  0002_auto_20200820_1225.py  0003_auto_20200817_1009.py
e_donations/: asgi.py  checks.py  settings.py  urls.py  views.py  wsgi.py
local/am/LC_MESSAGES/: django.mo  django.po
templates/: base.html  security.txt
templates/admin/: base_site.html
users/: admin.py  apps.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
